# ppc-optimizer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  combined.xlsx  config.yaml  main.py  pyproject.toml  requirements.txt  start-gui.bat
app/: __init__.py  cli.py  config.py  gui.py  logging_setup.py  version.py
app/analyzers/: __init__.py  audit_engine.py  decision_explainer.py  product_analyzer.py
app/core/: workbook.py
app/loaders/: __init__.py  google_ads_product_report_mapper.py  metric_normalizer.py  product_report_loader.py
app/models/: __init__.py  audit_report.py  budget.py  campaign.py  campaign_summary.py  product_decision.py  report.py
app/reporting/: __init__.py  excel_workbook_exporter.py  workbook_exporter.py
app/repositories/: __init__.py  product_report_repository.py
app/services/: __init__.py  application_pipeline.py  budget_optimizer.py  error_presenter.py  multi_campaign_analyzer.py  recommendation_engine.py  report_service.py  report_validator.py
app/utils/: __init__.py  column_names.py  report_columns.py
examples/: __init__.py
reports/: __init__.py
tests/: __init__.py  test_application_pipeline.py  test_architecture.py  test_audit_engine.py  test_audit_engine_config.py  test_budget_optimizer.py  test_cli.py  test_cli_errors.py  test_config.py  test_gui.py  test_logging.py  test_multi_campaign_analyzer.py  test_packaging.py  test_product_analyzer.py  test_product_report_loader.py  test_recommendation_engine.py  test_report_validator.py  test_workbook_exporter.py
tests/fixtures/: google_ads_product_en.csv  google_ads_product_en_semicolon.csv  google_ads_product_uk.csv  google_ads_product_uk_wrapped.csv
