[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ppc-optimizer"
description = "Google Ads Product Performance Optimizer"
readme = "README.md"
# Configurable: set your own name and email before publishing.
authors = [{ name = "PPC Optimizer Team", email = "team@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "loguru>=0.7,<1.0",
    "openpyxl>=3.1,<4.0",
    "pandas>=2.2,<3.0",
    "pydantic>=2.8,<3.0",
    "PyYAML>=6.0,<7.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
ppc-optimizer = "main:cli"
ppc-optimizer-gui = "app.gui:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.dynamic]
# Single source of truth for the version: app/version.py.
version = { attr = "app.version.__version__" }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = ["slow: tests that build or install the package"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
